[package]
name = "klcord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keynergy = { git = "https://github.com/keynergy/keynergy-lib" }
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rust-fuzzy-search = "0.1.1"
layoutexport = { git = "https://github.com/keynergy/layoutexport" }
